--- a/Piano_Stern/app/src/main/res/layout/activity_main.xml
+++ b/Piano_Stern/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:scaleX="2"
+                android:scaleY="2"
                 android:button="@drawable/repeat_icon"
                 />
         </LinearLayout>
