--- a/Piano_Stern/app/src/main/res/values/styles.xml
+++ b/Piano_Stern/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="AppTheme.Button" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:colorButtonNormal">#2196f3</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:colorButtonNormal">#039be5</item>
+        <item name="android:textColor">#000000</item>
     </style>
 </resources>
