--- a/Piano_Stern/app/src/main/res/layout/activity_main.xml
+++ b/Piano_Stern/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.noam.piano_stern.MainActivity">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,14 +28,15 @@
                 android:id="@+id/btn_playlist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="4dp"
                 android:text="Play List"/>
 
             <CheckBox
                 android:id="@+id/repeat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
                 android:scaleX="2"
                 android:scaleY="2"
                 android:button="@drawable/repeat_icon"
@@ -55,7 +55,7 @@
                 android:orientation="horizontal">
 
                 <FrameLayout
-                    android:layout_width="150dp"
+                    android:layout_width="110dp"
                     android:layout_height="match_parent"
                     android:id="@+id/left_buttons">
 
@@ -69,7 +69,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="clearday"
-                            android:layout_margin="10dp"
+                            android:layout_margin="2dp"
                             android:theme="@style/AppTheme.Button"/>
 
                         <Button
@@ -77,7 +77,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="hipjazz"
-                            android:layout_margin="10dp"
+                            android:layout_margin="2dp"
                             android:theme="@style/AppTheme.Button"/>
 
                         <Button
@@ -85,7 +85,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="retrosoul"
-                            android:layout_margin="10dp"
+                            android:layout_margin="2dp"
                             android:theme="@style/AppTheme.Button"/>
                     </LinearLayout>
                 </FrameLayout>
@@ -358,7 +358,7 @@
 
 
                 <FrameLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="110dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0"
                     android:id="@+id/right_buttons">
@@ -366,14 +366,15 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_marginLeft="7dp">
 
                         <Button
                             android:id="@+id/btn_song4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="memories"
-                            android:layout_margin="10dp"
+                            android:layout_margin="2dp"
                             android:theme="@style/AppTheme.Button"/>
 
                         <Button
@@ -381,7 +382,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="allthat"
-                            android:layout_margin="10dp"
+                            android:layout_margin="2dp"
                             android:theme="@style/AppTheme.Button"/>
 
                         <Button
@@ -389,7 +390,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="ssanova"
-                            android:layout_margin="10dp"
+                            android:layout_margin="2dp"
                             android:theme="@style/AppTheme.Button"/>
                     </LinearLayout>
                 </FrameLayout>
